# e-brain-

./: .env  .env.example  .gitignore  CHANGELOG.md  PR_WO-20250903-001.md  PR_WO-20250903-002.md  PR_WO-20250903-003.md  PR_WO-20250903-004.md  PR_WO-20250903-005.md  PR_WO-20250903-007.md  PR_WO-20250903-009.md  PR_WO-20250903-010.md  README.md  accounts-to-follow.md  architect-sys-prompt.md  architect.md  development-history.md  infos.md  instructions.md  pyproject.toml  requirements.txt  tmp_debug.py  tmp_http_test.py  tmp_io_tail.txt  tmp_jaccard.py  tmp_parse_feed.py  tmp_run_snippet.py  tmp_simhash.py  tmp_simhash2.py
artifacts/: discovery_results_2025-36.ndjson  metrics.json  sample_discovery.ndjson
config/: schedule.yaml  sources.yaml  sources.yml  tone.md
docs/: env-setup.md  ipfs.md
e_brain/: cli.py  config.py  db.py
e_brain_bot_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pipeline/: __init__.py  __main__.py  cluster.py  config.py  context.py  embed.py  eval.py  extract.py  ingest.py  io.py  llm.py  logging.py  main.py  normalize.py  obs.py  optimize_system_prompt.py  prompts.py  rank.py  robots.py  summarize.py
state/: pipeline.sqlite
tests/: test_cli_publish.py  test_cluster.py  test_deduper.py  test_embed_shape.py  test_ensure_embeddings.py  test_eval_models.py  test_extract_robots.py  test_ipfs_encode.py  test_obs_noop.py  test_pipeline_fixture.py  test_rank.py  test_robots.py  test_run_all_single_dir.py  test_summarize_bullets.py  test_summarize_llm.py  test_summarize_persist.py  test_upsert_article.py  test_url_canon.py
(+36 files in other folders)
